# mscope-rpi

./: .dockerignore  CI_CD_SETUP.md  CMakeLists.txt  DESCRIPTION.md  Dockerfile  LICENSE.md  RASPBERRY_PI_INSTALL.md  RASPBERRY_PI_SETUP.md  README-PRODUCTION-READY.md  README.md  build-installer-local.sh  build-raspberry-pi.sh  create-distribution-package.sh  deploy-raspberry-pi.sh  individual_plots_disabled.txt  install-raspberry-pi-private.sh  install-raspberry-pi.sh  install.sh  installer.sh  mscope-launcher  mscope_features.md  quick-install.sh  raspberry-pi-toolchain.cmake  rpi-install-commands.sh  μscope_Feature_Analysis.md
.github/workflows/: build-installer.yml
Libraries/: lib.h
app/: CMakeLists.txt  application.cpp  application.h
backends/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imguiCustomThemes.cpp  imguiCustomThemes.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  implot.cpp  implot.h  implot_internal.h  implot_items.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
backends/imgui/plugins/: ImFileBrowser.h
build-raspberry-pi/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-raspberry-pi/app/: Makefile  cmake_install.cmake
build-raspberry-pi/backends/: Makefile  cmake_install.cmake
build-raspberry-pi/components/: Makefile  cmake_install.cmake
build-raspberry-pi/render/: Makefile  cmake_install.cmake
build-raspberry-pi/serial/: Makefile  cmake_install.cmake
build-raspberry-pi/shader/: Makefile  cmake_install.cmake  trivs.shader  trivs_rpi.shader
build-raspberry-pi/ui/: Makefile  cmake_install.cmake
build-raspberry-pi/window/: Makefile  cmake_install.cmake
components/: CMakeLists.txt  components.h  graph.cpp  graph.h  input.h  triangle.cpp  triangle.h  vertexHolder.h
dependencies/include/GL/: eglew.h  glew.h  glxew.h  wglew.h
dependencies/include/GLFW/: glfw3.h  glfw3native.h
dependencies/include/KHR/: khrplatform.h
dependencies/include/glad/: glad.h
dependencies/include/glm/: common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vector_relational.hpp
dependencies/include/glm/detail/: _features.hpp  _fixes.hpp  _noise.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  compute_common.hpp  compute_vector_relational.hpp  glm.cpp  qualifier.hpp  setup.hpp  type_float.hpp  type_half.hpp  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_quat.hpp  type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
dependencies/include/glm/ext/: matrix_clip_space.hpp  matrix_common.hpp  matrix_projection.hpp  matrix_relational.hpp  matrix_transform.hpp  quaternion_common.hpp  quaternion_double.hpp  quaternion_double_precision.hpp  quaternion_exponential.hpp  quaternion_float.hpp  quaternion_float_precision.hpp  quaternion_geometric.hpp  quaternion_relational.hpp  quaternion_transform.hpp  quaternion_trigonometric.hpp  scalar_common.hpp  scalar_constants.hpp  scalar_int_sized.hpp  scalar_integer.hpp  scalar_relational.hpp  scalar_uint_sized.hpp  scalar_ulp.hpp  vector_bool1.hpp  vector_bool1_precision.hpp  vector_common.hpp  vector_double1.hpp  vector_double1_precision.hpp  vector_float1.hpp  vector_float1_precision.hpp  vector_int1.hpp  vector_int1_precision.hpp  vector_integer.hpp  vector_relational.hpp  vector_uint1.hpp  vector_uint1_precision.hpp  vector_ulp.hpp
dependencies/include/glm/gtc/: bitfield.hpp  color_space.hpp  constants.hpp  epsilon.hpp  integer.hpp  matrix_access.hpp  matrix_integer.hpp  matrix_inverse.hpp  matrix_transform.hpp  noise.hpp  packing.hpp  quaternion.hpp  random.hpp  reciprocal.hpp  round.hpp  type_aligned.hpp  type_precision.hpp  type_ptr.hpp  ulp.hpp  vec1.hpp
dependencies/include/glm/gtx/: associated_min_max.hpp  bit.hpp  closest_point.hpp  color_encoding.hpp  color_space.hpp  color_space_YCoCg.hpp  common.hpp  compatibility.hpp  component_wise.hpp  dual_quaternion.hpp  easing.hpp  euler_angles.hpp  extend.hpp  extended_min_max.hpp  exterior_product.hpp  fast_exponential.hpp  fast_square_root.hpp  fast_trigonometry.hpp  functions.hpp  gradient_paint.hpp  handed_coordinate_space.hpp  hash.hpp  integer.hpp  intersect.hpp  io.hpp  log_base.hpp  matrix_cross_product.hpp  matrix_decompose.hpp  matrix_factorisation.hpp  matrix_interpolation.hpp  matrix_major_storage.hpp  matrix_operation.hpp  matrix_query.hpp  matrix_transform_2d.hpp  mixed_product.hpp  norm.hpp  normal.hpp  normalize_dot.hpp  number_precision.hpp  optimum_pow.hpp  (+23 more)
dependencies/include/glm/simd/: common.h  exponential.h  geometric.h  integer.h  matrix.h  neon.h  platform.h
dependencies/include/stb/: stb_image.h
mscope-arm64-package/: README.md  install.sh  mscope-launcher  mscope.desktop
mscope-arm64-package/shader/: shaderUtil.cpp
mscope-rpi-fresh/: README.md  install.sh  uninstall-mscope.sh
mscope-rpi5-release/: install.sh  mscope-launcher  mscope.desktop
mscope-rpi5-release/shader/: CMakeLists.txt  shaderUtil.cpp  trifs_rpi.shader
payload/: mscope-launcher
pch/: pch.h
render/: CMakeLists.txt  openglBufferManagement.cpp  openglBufferManagement.h  openglContext.cpp  openglContext.h  renderBase.h  uiContext.cpp  uiContext.h
serial/: CMakeLists.txt  circularBuffer.h  csvStorage.cpp  csvStorage.h  serialComms.cpp  serialComms.h
shader/: shaderUtil.h
source/: CMakeLists.txt  main.cpp
ui/: CMakeLists.txt  IconsFontAwesome5.h  csvRecordingSettings.cpp  csvRecordingSettings.h  dataReceptionSettings.cpp  dataReceptionSettings.h  generalSettings.cpp  generalSettings.h  sceneView.cpp  sceneView.h  serialSettings.cpp  serialSettings.h  serialTerminal.cpp  serialTerminal.h  settings.cpp  settings.h  viewerSettings.cpp  viewerSettings.h  visualizer.cpp  visualizer.h
window/: CMakeLists.txt  orbWindow.cpp  orbWindow.h  window.h
(+3 files in other folders)
